<resources>
    <string name="app_name">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celsius">°C</string>
    <string name="details">Details</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="wnw">WNW</string>
    <string name="pressure">Pressure</string>
    <string name="icon_desc">icon of weather status</string>
    <string name="city_holder">Cairo</string>
    <string name="page_title">Weather</string>
    <string name="search">search</string>
</resources>