<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.shamardn.weather.ui.uistate.CurrentWeatherUiState" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/blue_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_half_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="36dp"
                android:src="@drawable/half_circle"
                android:contentDescription="@string/icon_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/separate"
                android:layout_width="match_parent"
                android:layout_height="24dp"

                android:background="@color/blue_color"
                app:layout_constraintBottom_toBottomOf="@+id/image_half_circle"
                app:layout_constraintStart_toStartOf="@+id/image_half_circle">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/light_gray_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separate">

                <TextView
                    android:id="@+id/text_value_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    tools:text="17°C"
                    android:text="@{item.feelsLike}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_feels_like"
                    app:layout_constraintEnd_toEndOf="@+id/text_feels_like"
                    app:layout_constraintStart_toStartOf="@+id/text_feels_like"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like"
                    android:textColor="@color/light_gray_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_hum"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_value_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="52%"
                    android:text="@{item.humidity}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_hum"
                    app:layout_constraintEnd_toEndOf="@+id/text_hum"
                    app:layout_constraintStart_toStartOf="@+id/text_hum"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/light_gray_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_wnw"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/text_feels_like" />

                <TextView
                    android:id="@+id/text_value_wnw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="24.1 km/h"
                    android:text="@{item.windSpeed}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_wnw"
                    app:layout_constraintEnd_toEndOf="@+id/text_wnw"
                    app:layout_constraintStart_toStartOf="@+id/text_wnw"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_wnw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wnw"
                    android:textColor="@color/light_gray_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_pressure"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/text_hum" />

                <TextView
                    android:id="@+id/text_value_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1010 hPa"
                    android:text="@{item.pressure}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_pressure"
                    app:layout_constraintEnd_toEndOf="@+id/text_pressure"
                    app:layout_constraintStart_toStartOf="@+id/text_pressure"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/light_gray_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/text_wnw" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/image_sunrise"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/sunrise"
                android:contentDescription="@string/icon_desc"
                app:layout_constraintBottom_toBottomOf="@+id/text_sunrise"
                app:layout_constraintEnd_toEndOf="@+id/text_sunrise"
                app:layout_constraintStart_toStartOf="@+id/text_sunrise" />

            <TextView
                android:id="@+id/text_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@{item.sunrise}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/image_half_circle"
                app:layout_constraintStart_toStartOf="@+id/image_half_circle"
                tools:text="06:13" />

            <ImageView
                android:id="@+id/image_sunset"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/sunset"
                android:contentDescription="@string/icon_desc"
                app:layout_constraintBottom_toBottomOf="@+id/text_sunset"
                app:layout_constraintEnd_toEndOf="@+id/text_sunset"
                app:layout_constraintStart_toStartOf="@+id/text_sunset" />

            <TextView
                android:id="@+id/text_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@{item.sunset}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/image_half_circle"
                app:layout_constraintEnd_toEndOf="@id/image_half_circle"
                tools:text="06:13" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>